Ignore some a tags that html proofer doesn't like

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,21 +1,21 @@
 <div class="banner">
     <div class="home-image">        
         <div id="main-banner-image">
-            <a class="banner-image" href="">
+            <a class="banner-image" href="" data-proofer-ignore>
                 <img alt="Publication teaser image." class="left-banner-image"/>
                 <span id="left-banner-image-title" class="banner-image-title"></span>
             </a>
         </div>
 
         <div id="top-right-banner-image">
-            <a class="banner-image" href="">
+            <a class="banner-image" href="" data-proofer-ignore>
                 <span id="top-right-banner-image-title" class="banner-image-title"></span>
                 <img alt="Publication teaser image." class="top-right-banner-image">
             </a>
         </div>
 
         <div id="bottom-right-banner-image">
-            <a class="banner-image" href="">
+            <a class="banner-image" href="" data-proofer-ignore>
                 <img alt="Publication teaser image." class="bottom-right-banner-image">
                 <span id="bottom-right-banner-image-title" class="banner-image-title"></span>
             </a>
