increase margin between images

--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -1,7 +1,8 @@
 .team-content {
   @include page-content();
-  margin-bottom:100px;
-  @include media($small-display){
+  margin-bottom: 100px;
+
+  @include media($small-display) {
     margin-bottom: 0px;
   }
 }
@@ -27,6 +28,7 @@
   .space {
     line-height: 0;
   }
+
   .space-alumni {
     margin: auto;
     width: 85%;
@@ -49,27 +51,29 @@
   display: block;
   border: 2px solid transparent;
   //min-height: 50px;
-  
+
   .name {
     @include span-columns(6 of 16);
     font-weight: 400;
   }
-  
+
   .spacer {
     float: right;
     margin-top: 1px;
     font-size: $page-content-font-size * 1.15;
     font-weight: 700;
     color: #3476A0;
+
     .dot {
       margin: 0px 1px 0 1px;
       padding-bottom: 0px;
     }
+
     @include media($small-display) {
       display: none;
     }
   }
-  
+
   .interests {
     @include span-columns(10 of 16);
     font-family: $condensed-font-family;
@@ -79,17 +83,21 @@
     bottom: 0;
     right: 0;
   }
-  
+
   .alumni {
     @include span-columns(5 of 16);
-    @include media($medium-display){
+
+    @include media($medium-display) {
       width: 45%;
     }
-    @include media($small-display){
+
+    @include media($small-display) {
       @include span-columns(4)
     }
   }
-  &.selected, &.highlighted {
+
+  &.selected,
+  &.highlighted {
     border: 2px solid $team-color;
     background: #EEE;
   }
@@ -99,20 +107,21 @@
   display: block;
   margin: 30px 0 -20px 0;
   padding: 50px 0 0px 0;
-  width: 100%; 
+  width: 100%;
   min-height: 50px;
+
   @include media($medium-display) {
     width: 75%;
     margin-bottom: -10px;
   }
+
   @include media($small-display) {
     margin-top: 90px;
     margin-bottom: -10px;
   }
 }
 
-.person-container
-{
+.person-container {
   height: 60px;
   vertical-align: middle;
 }
@@ -121,36 +130,49 @@
   filter: gray;
   border-style: solid;
   padding: 1px;
+
+
   &.color0 {
     border-color: #C03A2B;
   }
+
   &.color1 {
     border-color: #3476A0;
   }
+
   &.color2 {
     border-color: #2C3E50;
   }
+
   &.color3 {
     border-color: #E66558;
   }
-  &.selected, &.highlighted {
+
+  &.selected,
+  &.highlighted {
     box-shadow: 0 0 3px 4px darkgray;
+  }
+
+  &.not-first {
+    margin-left: 40px;
   }
 }
 
 .person-image-large {
   width: 120px;
   height: 120px;
-  @include border-radius( 50% );
+  @include border-radius(50%);
+
   &.offset0 {
     margin-bottom: 65px;
   }
 }
 
 .person-image {
-  width: 60px;
-  height: 60px;
-  @include border-radius( 50% );
+  width: 70px;
+  height: 70px;
+  @include border-radius(50%);
+
   &.offset0 {
     margin-bottom: 65px;
   }
@@ -158,10 +180,11 @@
 
 .person-image-small {
   @extend .person-image;
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   margin-right: -15px;
   margin-bottom: 25px;
+
   &.offset0 {
     margin-bottom: 75px;
   }
