adding papers to the end of paper blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,22 @@ title: Post | Vis Design Lab
 
           {{ content }}
       </div>  
+      {% if page.publication_key %}
+      <h2>The Paper</h2>
+
+      <div>
+      <p>This blog post is based on the following paper:</p>
+      
+        {% for publication in site.publications %}
+
+        {% if page.publication_key == publication.key %}
+       
+                    {% include publication_list_entry.html %}
+             
+        {% endif %}
+    {% endfor %}
+
+      </div>    {% endif %}
   </article>
 
 </div>
