Fix antarctic design link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -83,7 +83,7 @@
                 the
                 <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution license
                     (CC BY)</a>. <br/> Copyright or exclusive license of the linked publications is frequently with the publishers. Logo by <a
-                    href="http://www.antarctic-design.co.uk">Antarctic Design</a>. Last updated on {{ site.time | date: '%B %d, %Y' }}
+                    href="https://twitter.com/antarcticdesign">Antarctic Design</a>. Last updated on {{ site.time | date: '%B %d, %Y' }}
             </p>
         </div>
 
