Fix blog post links from publications

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -213,7 +213,7 @@ layout: default
 
     {% if page.blog-post %}
     <li>
-      <i class="fa fa-rss"></i> &nbsp;<a href="{{site.baseurl}}/{{ page.blog-post }}">Blog Post</a>
+      <i class="fa fa-rss"></i> &nbsp;<a href="{{site.baseurl}}/blog/{{ page.blog-post }}">Blog Post</a>
     </li>
     {% endif %}
 
