home only should be active when on home page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,10 +19,15 @@
           <span class="nav-text">{{ nav | upcase }}</span></a>
       </li>
 
-     
-      {% elsif navURL == ""%}
+      {% elsif navURL == "" and page.url == "/"%}
       <li class="{{ nav }}-button">
         <a class="active" href="{{ site.baseurl }}/">
+          <span class="nav-text">{{ nav | upcase }}</span></a>
+      </li>
+
+      {% elsif navURL == "" %}
+      <li class="{{ nav }}-button">
+        <a href="{{ site.baseurl }}/">
           <span class="nav-text">{{ nav | upcase }}</span></a>
       </li>
 
