adding NIH projects, updating personal details

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -186,6 +186,11 @@ layout: default
         <span>{{page.award-lab}}</span>
         {% endif %}
 
+        {% if page.award-lex %}
+        <h3>Share at VDL (Lex):</h3>
+        <span>{{page.award-lex}}</span>
+        {% endif %}
+
         {% if page.updated %}
         <h3>Last Updated</h3>
         <span>{{page.updated}}</span>
