Add youtube channel to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
         </li>
         {% endif %} {% if site.youtube_username %}
         <li>
-          <a href="https://www.youtube.com/user/{{ site.youtube_username }}">
+          <a href="https://www.youtube.com/channel/{{ site.youtube_username }}">
             <i class="fa fa-lg fa-youtube"></i>
             <span class="footer-text">YouTube</span>
           </a>
