post: added persist blog

--- a/css/site.scss
+++ b/css/site.scss
@@ -7,6 +7,8 @@
 
 @import '../_sass/base/cards';
 
+@import './syntax_highlight.css';
+
 $small-display-columns: 4;
 $medium-display-columns: 12;
 $large-display-columns: 12;
