some scss cleanup of deprecations; no solution for 1 remaining warning

--- a/_sass/base/_forms.scss
+++ b/_sass/base/_forms.scss
@@ -1,7 +1,7 @@
 fieldset {
   background: lighten($base-border-color, 10);
   border: 1px solid $base-border-color;
-  margin: 0 0 ($base-line-height / 2) 0;
+  margin: 0 0 (calc($base-line-height / 2)) 0;
   padding: $base-line-height;
 }
 
@@ -15,7 +15,7 @@ select {
 
 label {
   font-weight: bold;
-  margin-bottom: $base-line-height / 4;
+  margin-bottom: calc($base-line-height / 4);
 
   &.required:after {
     content: "*";
@@ -37,8 +37,8 @@ select[multiple=multiple] {
   box-shadow: $form-box-shadow;
   font-family: $form-font-family;
   font-size: $form-font-size;
-  margin-bottom: $base-line-height / 2;
-  padding: ($base-line-height / 3) ($base-line-height / 3);
+  margin-bottom: calc($base-line-height / 2);
+  padding: (calc($base-line-height / 3)) (calc($base-line-height / 3));
   width: 100%;
 
   &:hover {
@@ -62,12 +62,12 @@ input[type="search"] {
 
 input[type="checkbox"], input[type="radio"] {
   display: inline;
-  margin-right: $base-line-height / 4;
+  margin-right: calc($base-line-height / 4);
 }
 
 input[type="file"] {
-  margin-bottom: $base-line-height / 2;
-  padding-bottom: ($base-line-height / 3);
+  margin-bottom: calc($base-line-height / 2);
+  padding-bottom: (calc($base-line-height / 3));
   width: 100%;
 }
 
