--- a/_sass/base/mixins/_flash.scss
+++ b/_sass/base/mixins/_flash.scss
@@ -2,8 +2,8 @@
   background: $color;
   color: darken($color, 60);
   font-weight: bold;
-  margin-bottom: $base-line-height / 2;
-  padding: $base-line-height / 2;
+  margin-bottom: calc($base-line-height / 2);
+  padding: calc($base-line-height / 2);
 
   a {
     color: darken($color, 70);
