--- a/_sass/bourbon/functions/_modular-scale.scss
+++ b/_sass/bourbon/functions/_modular-scale.scss
@@ -24,10 +24,10 @@ $double-octave:    4;
 
   // scale $v2 to just above $v1
   @while $v2 > $v1 {
-    $v2: ($v2 / $ratio); // will be off-by-1
+    $v2: (calc($v2 / $ratio)); // will be off-by-1
   }
   @while $v2 < $v1 {
-    $v2: ($v2 * $ratio); // will fix off-by-1
+    $v2: (calc($v2 * $ratio)); // will fix off-by-1
   }
 
   // check AFTER scaling $v2 to prevent double-counting corner-case
@@ -37,9 +37,9 @@ $double-octave:    4;
     @for $i from 1 through $increment {
       @if $double-stranded and ($v1 * $ratio) > $v2 {
         $value: $v2;
-        $v2: ($v2 * $ratio);
+        $v2: (calc($v2 * $ratio));
       } @else {
-        $v1: ($v1 * $ratio);
+        $v1: calc($v1 * $ratio);
         $value: $v1;
       }
     }
