--- a/_sass/base/_cards.scss
+++ b/_sass/base/_cards.scss
@@ -71,7 +71,7 @@
     background-color: $card-header-background;
     border-bottom: $card-border;
     border-radius: $base-border-radius $base-border-radius 0 0;
-    padding: $base-line-height/3 $gutter/2;
+    padding: calc($base-line-height/3) calc($gutter/2);
 
     a {
       display: block;
@@ -98,13 +98,13 @@
   }
 
   .card-copy {
-    padding: $base-line-height/2 $gutter/2;
+    padding: calc($base-line-height/2) calc($gutter/2);
     font-size: .9em;
     line-height: 1.5em;
   }
 
   .card-stats {
-    padding: $base-line-height/2 $gutter/2;
+    padding: calc($base-line-height/2) calc($gutter/2);
     overflow: auto;
 
     ul li {
