--- a/_sass/base/_lists.scss
+++ b/_sass/base/_lists.scss
@@ -5,13 +5,13 @@ ul {
 
   &%default-ul {
     list-style-type: disc;
-    margin-bottom: $base-line-height / 2;
+    margin-bottom: calc($base-line-height / 2);
     padding-left: $base-line-height;
   }
 
   &%default-ol {
     list-style-type: decimal;
-    margin-bottom: $base-line-height / 2;
+    margin-bottom: calc($base-line-height / 2);
     padding-left: $base-line-height;
   }
 }
@@ -224,11 +224,11 @@ ul.source-icon-list {
 */
 
 dl {
-  margin-bottom: $base-line-height / 2;
+  margin-bottom: calc($base-line-height / 2);
 
   dt {
     font-weight: bold;
-    margin-top: $base-line-height / 2;
+    margin-top: calc($base-line-height / 2);
   }
 
   dd {
