--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -133,7 +133,7 @@ blockquote {
   border-left: 2px solid $base-border-color;
   color: lighten($base-font-color, 15);
   margin: $base-line-height 0;
-  padding-left: $base-line-height / 2;
+  padding-left: calc($base-line-height / 2);
 }
 
 cite {
