--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -5,9 +5,9 @@ $base-font-family: $sans-serif;
 
 // Sizes
 $base-font-size: 1em;
-$base-line-height: calc($base-font-size * 1.4);
+$base-line-height: $base-font-size * 1.4;
 $unitless-line-height: strip-units($base-line-height);
-$title-line-height: calc($base-font-size * 1.25);
+$title-line-height: $base-font-size * 1.25;
 $base-border-radius: em(3);
 
 
