--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,11 +12,23 @@ title: Post | Vis Design Lab
    <h1> {{ page.title }} </h1>
      <div class="post-meta" >
 
+
       {% if page.authors %}
         {% for author in page.authors %}
           {% assign known = false %}         
-            {% for person in site.persons %}{% if author == person.key %}{% assign known = true %}<a href="{{ person.website }}"><img src="{{person.image}}" alt="{{person.first_name}} {{person.last_name}}" class="person-img person-image-blog color0" style="float: left;  margin-right: 10px"></a>        
-              <b><a href="{{ person.website }}">{{ person.first_name }}&nbsp;{{ person.last_name }}</a></b>{% endif %}{% endfor %}{% if known == false %}<b>{{author}}</b>{% endif %}{% if forloop.last == false %},&nbsp;{% endif %}       
+            {% for person in site.persons %}
+              {% if author == person.key %}
+                {% assign known = true %}
+                {% if page.hide-author-images != true %}
+                 <a href="{{ person.website }}"><img src="{{person.image}}" alt="{{person.first_name}} {{person.last_name}}" class="person-img person-image-blog color0" style="float: left;  margin-right: 10px"></a>    
+                {% endif %}
+                <b><a href="{{ person.website }}">{{ person.first_name }}&nbsp;{{ person.last_name }}</a></b>
+              {% endif %}
+              {% endfor %}
+              {% if known == false %}
+                <b>{{author}}</b>
+                {% endif %}
+                {% if forloop.last == false %},&nbsp;{% endif %}       
         {% endfor %}  
       {% endif %} 
         <br>
