--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,3 +41,8 @@
     </ul>
   </div>
 </div>
+<br><br><br>
+<div id="lab-move-banner">
+  <p><strong>🚚 Part of the lab is moving to TU Graz in Austria!</strong> <br>
+     Visit our new website at <a href="http://visdesignlab.net">visdesignlab.net</a>. This site will remain available indefinitely for archival purposes, but it will no longer be updated after August 2025.</p></div>
+
