--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,5 +44,5 @@
 <br><br><br>
 <div id="lab-move-banner">
   <p><strong>🚚 Part of the lab is moving to TU Graz in Austria!</strong> <br>
-     Visit our new website at <a href="http://visdesignlab.net">visdesignlab.net</a>. This site will remain available indefinitely for archival purposes, but it will no longer be updated after August 2025.</p></div>
+     Visit our new website at <a href="https://visdesignlab.net">visdesignlab.net</a>. This site will remain available indefinitely for archival purposes, but it will no longer be updated after August 2025.</p></div>
 
