linking to move announcement

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,5 +44,6 @@
 <br><br><br>
 <div id="lab-move-banner">
   <p><strong>🚚 Part of the lab is moving to TU Graz in Austria!</strong> <br>
-     Visit our new website at <a href="https://visdesignlab.net">visdesignlab.net</a>. This site will remain available indefinitely for archival purposes, but it will no longer be updated after August 2025.</p></div>
+     Visit our new website at <a href="https://visdesignlab.net">visdesignlab.net</a>. This site will remain available indefinitely for archival purposes, but it will no longer be updated after August 2025. For more information, see our <a href="https://www.visdesignlab.net/blog/2025/07/30/vdl-moves/">move announcement</a>.</p>
+    </div>
 
