MU Institute for Data Science and Informatics Initial Version

--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -1,12 +1,15 @@
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta name="viewport" content="width=device-width">
+<meta name="developer" content="Md. Zubaer Ahammed">
+<meta name="developer-email" content="zubaerahammed223@gmail.com">
+<meta name="developer-website" content="https://zubaer.com">
 <meta name="description" content="{{ site.description }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}" data-proofer-ignore>
 
 <!-- Custom CSS -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/css/site.css?ver=1.0.0">
 
 <link rel="stylesheet" href="{{base.url}}/css/vdl_logo_styles.css">
 
