--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="navigation">
   <div id="svg" class="logo">
-    <!-- <img style="height: 100px" src="{{ site.baseurl }}/assets/images/logos/vdl.png" alt="vdl logo"> -->
+    <img style="margin-top: 30px;" width="314" x="0px" y="0px" viewBox="0 0 62 80.6" src="{{ site.baseurl }}/assets/images/logos/iDASLogo.jpg" alt="vdl logo">
   </div>
   <div class="navigation-buttons">
     <ul>
@@ -18,7 +18,7 @@
         <a class="active" href="{{ site.baseurl }}/{{ navURL }}/">
           <span class="nav-text">{{ nav | upcase }}</span></a>
       </li>
-
+ 
       {% elsif navURL == "" and page.url == "/"%}
       <li class="{{ nav }}-button">
         <a class="active" href="{{ site.baseurl }}/">
@@ -41,9 +41,9 @@
     </ul>
   </div>
 </div>
-<br><br><br>
-<div id="lab-move-banner">
+<br><br>
+<!-- <div id="lab-move-banner">
   <p><strong>🚚 Part of the lab is moving to TU Graz in Austria!</strong> <br>
      Visit our new website at <a href="https://visdesignlab.net">visdesignlab.net</a>. This site will remain available indefinitely for archival purposes, but it will no longer be updated after August 2025. For more information, see our <a href="https://www.visdesignlab.net/blog/2025/07/30/vdl-moves/">move announcement</a>.</p>
-    </div>
+    </div> -->
 
