--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -120,11 +120,11 @@ layout: default
     <p>
         <b>Contact</b> <br>
         <a href="mailto:{{ page.email }}"><i class="fa fa-envelope"></i> {{ page.email }}</a> <br>
-        SCI Institute, <br>
-        School of Computing, <br>
-        University of Utah <br>
-        <a href="https://www.google.com/maps/place/Scientific+Computing+and+Imaging+Institute+(SCI+Institute)/@40.7682198,-111.876249,14.58z/data=!4m8!1m2!3m1!2sScientific+Computing+and+Imaging+Institute+(SCI+Institute)!3m4!1s0x0:0xed3af30fcd0bf927!8m2!3d40.7677941!4d-111.8449938"><i class="fa fa-map-marker"></i> 72 South Central Campus Drive,<br>
-            Salt Lake City, Utah 84112 </a><br>
+        iDAS Research Lab, <br>
+        MU Institute for Data Science and Informatics, <br>
+        University of Missouri <br>
+        <a href="https://www.google.com/maps/place/Scientific+Computing+and+Imaging+Institute+(SCI+Institute)/@40.7682198,-111.876249,14.58z/data=!4m8!1m2!3m1!2sScientific+Computing+and+Imaging+Institute+(SCI+Institute)!3m4!1s0x0:0xed3af30fcd0bf927!8m2!3d40.7677941!4d-111.8449938"><i class="fa fa-map-marker"></i> 22 Heinkel Building, Columbia, MO 65211<br>
+            </a><br>
         {% if page.room %}
         Room: {{ page.room }}
         {% endif %}
