--- a/_sass/base/_lists.scss
+++ b/_sass/base/_lists.scss
@@ -70,7 +70,7 @@ ul {
   	border-bottom: dotted 1px transparent;
     }
     a:hover {
-  	border-bottom-color: #E64C3C;
+  	border-bottom-color: $missouri-yellow;
     }
   } 
   	  
