--- a/_includes/person.html
+++ b/_includes/person.html
@@ -1,4 +1,7 @@
 {% for person in site.persons %}
+{% if person.role == "phdstudent" %}
+<!-- <h2>{{ person.first_name }} {{ person.last_name }}</h2> -->
+{% endif %}
 {% if person.graduated == null %}
 {% if person.key == include.key  or person.role == include.role %}
 <p class="person-list-block" id="{{ person.key }}" onclick="selectPerson(this.id)" onmouseenter="highlightPerson(this.id)" onmouseleave="clearClass('highlighted')">
